// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should display content with default classnames 1`] = `
<div>
  <span
    class="quill-typography__body-text__size--undefined__weight--regular__decoration--default"
  >
    Text content
  </span>
</div>
`;

exports[`Text should have correct classnames with bold enabled 1`] = `
<div>
  <span
    class="quill-typography__body-text__size--undefined__weight--bold__decoration--default"
  >
    Text content
  </span>
</div>
`;

exports[`Text should have correct classnames with italic enabled 1`] = `
<div>
  <span
    class="quill-typography__body-text__size--undefined__weight--regular__decoration--italic"
  >
    Text content
  </span>
</div>
`;

exports[`Text should have correct classnames with size lg 1`] = `
<div>
  <span
    class="quill-typography__body-text__size--lg__weight--regular__decoration--default"
  >
    Text content
  </span>
</div>
`;

exports[`Text should have correct classnames with size md 1`] = `
<div>
  <span
    class="quill-typography__body-text__size--md__weight--regular__decoration--default"
  >
    Text content
  </span>
</div>
`;

exports[`Text should have correct classnames with size sm 1`] = `
<div>
  <span
    class="quill-typography__body-text__size--sm__weight--regular__decoration--default"
  >
    Text content
  </span>
</div>
`;

exports[`Text should have correct classnames with size xl 1`] = `
<div>
  <span
    class="quill-typography__body-text__size--xl__weight--regular__decoration--default"
  >
    Text content
  </span>
</div>
`;

exports[`Text should have correct classnames with size xl and type underline 1`] = `
<div>
  <span
    class="quill-typography__body-text__size--xl__weight--regular__decoration--underline"
  >
    Text content
  </span>
</div>
`;
